add the user service

--- a/auth/.gitignore
+++ b/auth/.gitignore
@@ -1,9 +1,5 @@
 node_modules
-python_modules
-.venv
-venv
-.motia
-.mermaid
-dist
-*.pyc
+# Keep environment variables out of version control
 .env
+
+/generated/prisma
