--- a/User/package.json
+++ b/User/package.json
@@ -1,35 +1,26 @@
 {
-  "name": "auth",
+  "name": "user",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
-    "axios": "^1.13.2",
+    "@types/express": "^5.0.6",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "pg": "^8.16.3",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.0.3",
-    "@types/pg": "^8.16.0",
-    "jsonwebtoken": "^9.0.3",
-    "prisma": "^7.2.0"
+    "jsonwebtoken": "^9.0.3"
   }
 }
