--- a/auth/package.json
+++ b/auth/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^8.20.4",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
@@ -27,8 +29,10 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/redis": "^4.0.10",
     "jsonwebtoken": "^9.0.3",
     "prisma": "^7.2.0"
   }
