--- a/Db/package.json
+++ b/Db/package.json
@@ -2,11 +2,23 @@
   "name": "db",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
+    "tsx": "^4.21.0"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.8"
+  }
 }
