--- a/User/package.json
+++ b/User/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@aws-sdk/client-sqs": "^3.958.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
