--- a/Upload-Service/package.json
+++ b/Upload-Service/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.937.0",
+    "@aws-sdk/client-sqs": "^3.958.0",
     "@types/express": "^5.0.5",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^2.2.0",
@@ -21,13 +24,16 @@
     "ioredis": "^5.8.2",
     "mime-types": "^3.0.1",
     "mongoose": "^9.0.0",
+    "pg": "^8.16.3",
     "redis": "^5.9.0",
     "simple-git": "^3.30.0",
+    "tsx": "^4.21.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/mime-types": "^3.0.1",
+    "@types/pg": "^8.16.0",
     "ts-node-dev": "^2.0.0"
   }
 }
