add google oauth

--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,8 @@ REDIS_PORT=
 COOKIE_MAX_AGE=
 NODE_ENV=
 SQS_URL=
+GOOGLE_REDIRECT_URI=
+GOOGLE_CLIENT_ID=
+GOOGLE_REDIRECT_URI=
+YOUTUBE_API_URL=
+
