--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^7.2.0",
     "@zylo/auth": "workspace:*",
     "@zylo/errors": "workspace:*",
+    "@zylo/scopes": "workspace:*",
     "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
